# qbi-hackathon-2026

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tailwind.config.ts
.claude/: launch.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  validate-structures.yml
app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
app/api/search/: route.ts
bindscout/: .env.example  README.md  pyproject.toml  validate_structures.py
bindscout/frontend/: index.html
bindscout/src/bindscout/: __init__.py  alphafold.py  cache.py  chat.py  cli.py  esmfold.py  mcp_server.py  outputs.py  pipeline.py  server.py  sifts.py  structio.py  trim.py  uniprot.py  viewer.py
bindscout/tests/: conftest.py  test_ladder.py  test_pipeline.py  test_units.py
components/: ColumnCard.tsx  Header.tsx  OriginColumn.tsx  ResultColumns.tsx  SearchBox.tsx  TrimmedColumn.tsx
lib/: types.ts  uniprot.ts
targetprep3d/: .gitignore  README.md  pyproject.toml  validate_structures.py
targetprep3d/frontend/: index.html
targetprep3d/src/targetprep3d/: __init__.py  cache.py  cli.py  glyco.py  hotspots.py  mcp_server.py  outputs.py  server.py  topology.py
targetprep3d/tests/: conftest.py  test_ladder.py  test_pipeline.py  test_units.py
trimprot/: CLAUDE.md  README.md  pyproject.toml  validate_structures.py
trimprot-legacy/: HOSTING.md
trimprot-legacy/backend/app/: annotate.py  fetch_alphafold.py  pdb_search.py  sifts.py  summary.py  trim.py
trimprot-legacy/backend/output/: 1MZA_full.cif  1MZA_summary.json  1YY9_full.cif  1YY9_summary.json  3KFU_summary.json  4B6L_full.cif  4B6L_summary.json  4JVH_full.cif  4JVH_summary.json  6C6N_full.cif  6C6N_summary.json  6GLC_full.cif  6GLC_summary.json  AF-B6A8C7_full.cif  AF-B6A8C7_summary.json  AF-P56721_full.cif  (+5 more)
trimprot-legacy/frontend/: index.html
trimprot/backend/: pytest.ini  requirements.txt
trimprot/backend/app/: annotate.py  api.py  discover.py  pdb_search.py  run_egfr.py  summary.py  trim.py  uniprot.py
trimprot/backend/app/tests/: test_alphafold_pipeline.py  test_fetch_alphafold.py
trimprot/frontend/: index.html
trimprot/src/trimprot/: __init__.py  avoid.py  cli.py  interface.py  mcp_server.py  outputs.py  pipeline.py  server.py  structio.py  structures.py  uniprot.py
trimprot/tests/: test_ladder.py  test_units.py
(+3 files in other folders)
