[project]
name = "trimprot"
version = "0.1.0"
description = "Deterministic protein target-preparation pipeline for de novo binder design"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gemmi>=0.6.6",
    "requests>=2.31",
    "fastmcp>=2.0",
    "fastapi>=0.138.1",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
trimprot = "trimprot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trimprot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require live HTTP access to UniProt/PDBe/RCSB",
]
